<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xhwl.xhwlownerapp.activity.View.HomeView.DeviceActivity.ResetGatewayActivity">

    <include layout="@layout/top_layout"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="414px"
        android:background="@drawable/device_gateway_bg">

        <ImageView
            android:layout_width="340px"
            android:layout_height="340px"
            android:layout_centerInParent="true"
            android:background="@drawable/device_gateway" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="56px"
        android:paddingLeft="58px"
        android:paddingRight="64px"
        android:background="@color/color_device_add">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="36px"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40px">

                <com.xhwl.xhwlownerapp.UIUtils.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/white" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="1px"
                android:layout_height="52px"
                android:layout_gravity="center"
                android:background="@color/color_line" />

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40px">

                <com.xhwl.xhwlownerapp.UIUtils.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/white" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="1px"
                android:layout_height="52px"
                android:layout_gravity="center"
                android:background="@color/color_line" />

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40px">

                <com.xhwl.xhwlownerapp.UIUtils.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/white" />

            </com.zhy.autolayout.AutoRelativeLayout>
            <View
                android:layout_width="1px"
                android:layout_height="52px"
                android:layout_gravity="center"
                android:background="@color/color_line" />
            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40px">

                <com.xhwl.xhwlownerapp.UIUtils.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/device_serial_num"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@color/white" />

            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="360px"
            android:layout_marginLeft="54px"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40px"
                android:textSize="28px"
                android:textColor="@color/color_device_add_step"
                android:text="@string/resetgateway_1"/>

            <View
                android:layout_width="1px"
                android:layout_height="52px"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40px"
                android:textSize="28px"
                android:textColor="@color/color_device_add_step"
                android:text="@string/resetgateway_2"/>

            <View
                android:layout_width="1px"
                android:layout_height="52px"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40px"
                android:textSize="28px"
                android:textColor="@color/color_device_add_step"
                android:text="@string/resetgateway_3"/>

            <View
                android:layout_width="1px"
                android:layout_height="52px"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40px"
                android:textSize="28px"
                android:textColor="@color/color_device_add_step"
                android:text="@string/resetgateway_4"/>
        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_line" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="133px"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/device_reset_gateway"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24px"
            android:layout_marginLeft="45px"
            android:layout_marginRight="45px"
            android:layout_marginTop="24px"
            android:background="@drawable/next_btn_bg"
            android:text="完成网关重置"
            android:textColor="@color/white"
            android:textSize="30px" />

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
